<resources>
    <string name="app_name">Autofill</string>
    <string name="nav_header_title">AUTOFILL</string>
    <string name="nav_header_subtitle">Secure your Data</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="card">Card</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="masterPasswordPrompt">Enter Master Password</string>
    <string name="encrypt">Encrypt</string>
    <string name="save">Save</string>
    <string name="decrypt">Decrypt</string>
    <string name="Validity">Valid Thru</string>
    <string name="cvv">CVV</string>
    <string name="cardType">Card Type</string>
    <string name="holderName">Card holder Name</string>
    <string name="mm">mm</string>
    <string name="yy">yy</string>
    <string name="bankName">Bank Name</string>
    <string name="user_name">User Name</string>
    <string name="settings">Settings</string>
    <string name="linkWithFP">Link With Finger Print</string>
    <string name="version">Choose Version to Restore</string>
    <string name="close">Close</string>
    <string name="channel_name">Auto Sync Channel</string>
    <string name="channel_description">Bankground task notifications</string>
    <string name="AutoFillServiceDescription">Assist with Autofill service for Browsers</string>
    <string name="xxxx">XXXX</string>
    <string name="loginForm">LOGIN_FORM</string>
    <string name="name">Name</string>
    <string name="flat_no">Flat No.</string>
    <string name="building_name">Building Name</string>
    <string name="street_no">Street No</string>
    <string name="street_name">Street Name</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="Identity">Identity</string>
    <string name="identity_number">Identity Number</string>
    <string name="identity">Identity</string>

    <string-array name="dark_mode">
        <item>2</item>
        <item>1</item>
        <item>-1</item>
        <item>3</item>
    </string-array>
    <string-array name="dark_mode_alias">
        <item>Night Mode Always On</item>
        <item>Night Mode Always Off</item>
        <item>Follow System Setting</item>
        <item>Follow Battery Saver</item>
    </string-array>
    <string-array name="card_types">
        <item>Credit Card</item>
        <item>Debit Card</item>
    </string-array>
    <string-array name="identity_types">
        <item>Aadhaar Card</item>
        <item>Driving Licence</item>
        <item>Pan Card</item>
        <item>Passport</item>
        <item>UAN Number</item>
    </string-array>
</resources>
