<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/password_menu"
            android:icon="@drawable/password"
            android:title="@string/password" />
        <item
            android:id="@+id/card_menu"
            android:icon="@drawable/card"
            android:title="@string/card" />
        <item
            android:id="@+id/address_menu"
            android:icon="@drawable/address"
            android:title="@string/address" />
        <item
            android:id="@+id/settings_menu"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
